Implement db stuff

--- a/src/Carver/Carver.csproj
+++ b/src/Carver/Carver.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="Npgsql" Version="3.2.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
