--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ docker_images/
 appsettings.json
 .vs/
 
+# Editor
+.vscode/
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
